k8s_crawler/crawler/crawler-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
  labels:
    app: crawler
    component: crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
      component: crawler
  template:
    metadata:
      name: crawler-pod
      labels:
        app: crawler
        component: crawler
    spec:
      containers:
      - image: mzabolotnov/crawler:k8s_1.0
        name: crawler
