k8s_crawler/crawler/ui-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: crawler
    component: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
      component: ui
  template:
    metadata:
      name: ui-pod
      labels:
        app: crawler
        component: ui
    spec:
      containers:
      - image: mzabolotnov/ui:k8s_ci_2.0
        name: ui
