k8s_crawler/crawler/crawler-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler
  labels:
    app: crawler
    component: crawler
spec:
  # type: NodePort
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: crawler
    component: crawler
