k8s_crawler/crawler/ui-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: crawler
    component: ui
spec:
  type: NodePort
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: crawler
    component: ui
