k8s_crawler/crawler/ui-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: mikhza.twilightparadox.com
      http:
       paths:
       - path: /
         pathType: Prefix
         backend:
          service:
            name: ui
            port:
              number: 8000
